--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,13 +1,18 @@
 name: reviewdog
-on: [pull_request]
+
+on:
+  pull_request:
+    branches:
+      - development
+
 jobs:
   eslint:
-    name: runner / eslint
+    name: check_eslint_error
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: eslint
+      - name: eslint review
         uses: reviewdog/action-eslint@v1
         with:
-          reporter: github-pr-review # Change reporter.
-          eslint_flags: 'src/'
+          reporter: github-pr-check
+          eslint_flags: './**/*.{vue,ts,js}'
