modify back reviewdog config as original

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -8,9 +8,9 @@ on:
 jobs:
   eslint:
     name: check_eslint_error
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: eslint review
         uses: reviewdog/action-eslint@v1
         with:
